style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    background: #000000;
    background-color: #060607;
}

/* Header Section*/

header {
    color: #fff;
    display: flex;
    flex-direction:row;
    justify-content: space-evenly;
    position: relative;
    padding: 30px;
    min-height: 15vh;
    width: 100vw;
}

.header-title {
    text-align: center;
    position: relative;
    margin: auto;
    font-size: 1.6rem;
    font-weight: 300;
}

.header-title h2 {
    font-size: 1.15rem;
}

.header-logo {
    margin: auto 0px auto 400px;
}

.header-supp {
    margin: auto 400px auto 0px;
}

.header-supp button {
    background: #9b51e0;
    width: 100px;
    height: 50px;
    border: none;
    color: #fff;
    font-size: 1.2rem;
    padding: 0px 10px 0px 10px;
    font-weight: 400;
}

.header-logo img {
    width: 120px;
}

/* Navbar Section */

nav {
    background: #212121;
    border: none;
    border-bottom: 7px solid #9b51e0;
    width: 100vw;
    height: auto;
}

nav ul{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 50px;
    padding: 25px 20px;
    list-style-type: none;
}

.push-right {
    margin-left: 60px;
}

nav ul a {
    text-decoration: none;
    color: #fff;
    font-size: 1.3rem;
}

nav ul li:first-child a {
    color: #9b51e0;
    padding: 10px 15px;
}

/* Main feed section */

.main-page {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100vw;
}

/* Main Section Area */

.main-section {
    position: relative;
    color: #fff;
    margin: auto;
    padding: 0 50px 0px 20px;
    width: 880px;
    display: grid;
    justify-content: center;
    border-right: 3px solid #9b51e0;
    margin-top: 50px;
    margin-left: 400px;
    /* border: 2px solid white; */
}

.main-section img {
    width: 100%;
    height: 100%;
}

.article-cat {
    color: #9b51e0;
    font-size: 1.3rem;
    font-weight: 400;
    margin: 10px 0px 10px 0px;
}

.article-text {
    font-size: 1.3rem;
    line-height: 1.8;
    margin: 10px 0px 10px 0px;
}

.article-auth {
    color: grey;
    font-size: 1.1rem;
    
}

/* Main Aside bar */

aside {
    display: flex;
    flex-direction: column;
    margin: 50px 380px 0px 0px;
    width: 250px;
    /* border: 2px solid white; */
    padding: 0 20px 0 20px;
}

.aside-header {
    color: #fff;
    font-size: 1.2rem;
}

.aside-span {
    color: #9b51e0;
}

.aside-h1 {
    color: #fff;
    font-size: 1.1rem;
}

.aside-p {
    color: gray;
    margin-top: 5px;
    font-size: 0.9rem;
}

aside img {
    width: 100%;
    margin-top: 25px;
}

/* Gaming reviews section */

.gaming-news {
    width: 100%;
    padding: 20px;
    display: grid;
    grid-template-columns: repeat(3, 0.2fr);
    justify-content: center;
    gap: 30px;
}

.gaming-news-header {
    color: #fff;
    font-size: 1.5rem;
    margin: 40px 380px -30px 410px;
    border-bottom: 5px solid #9b51e0;
}

.gaming-news img {
    width: 100%;
    height: 230px;
    margin-top: 50px;
}

.gaming-news-span {
    color: #9b51e0;
    font-size: 1.1rem;
}

.gaming-news-h1 {
    color: #fff;
    font-size: 1.4rem;
}

.gaming-news-p {
    color: gray;
    font-size: 0.9rem;
    margin-top: 10px;
}

